--- a/maytinh.html
+++ b/maytinh.html
@@ -34,6 +34,7 @@ Nhập b: <input type="" name=""id="b">
 	function chia(){
 		alert(parseInt(a.value)/ parseInt(b.value));
 	}
+	/sdfsajdklfsjdfsakjfkdfjk
 </script>
 </body>
 </html>
